@@ -3,6 +3,9 @@
 	* src/fit.c (setvarcovar):  Allocated size of string for FIT_COV_*_*
 	variables was too small, corrupting the allocation heap.
 
+	* src/fit.c (regress_finalize):  Show results regardless in log file
+	even if the "quiet" flag suppresses screen output.
+
 2015-04-07  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/term.c (termp_apply_lp_properties):  Fix incorrect assumption
